--- a/index.html
+++ b/index.html
@@ -3,9 +3,48 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pagina principal - HACKATON 2</title>
+    <title>HACKATON S2 - RETO 4</title>
 </head>
 <body>
-    <h1>HACKATON SEMANA 2</h1>
+<header>
+</header>
+<main>
+<section>
+    <h2>Pachacutec</h2>
+    <h1>Hola, mi nombre es Luis Eduardo</h1>    
+    <figure>
+        <img src="./images/image 1.png" alt="Fondo">
+    </figure>
+</section>
+
+<section>
+    <h2>Sobre mi</h2>
+<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores optio velit non. Soluta provident sunt accusantium numquam temporibus, officiis inventore quibusdam molestiae corporis illo maiores consectetur est officia illum laborum!</p>
+<button name="view cv">Ver CV</button>
+
+</section>
+
+<section>
+    <h2>Mis Skills</h2>
+</section>
+
+<section>
+    <h2>Portafolio</h2>
+</section>
+
+<section>
+    <h2>Clientes</h2>
+</section>
+
+<section>
+    <h2>Contacto</h2>
+</section>
+
+</main>
+
+<footer>
+
+</footer>
+
 </body>
 </html>
