--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <header>
 </header>
 <main>
-<section>
+<section class="home">
     <h2>Pachacutec</h2>
     <h1>Hola, mi nombre es Luis Eduardo</h1>    
     <figure>
@@ -17,27 +17,104 @@
     </figure>
 </section>
 
-<section>
+<section class="about">
     <h2>Sobre mi</h2>
 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores optio velit non. Soluta provident sunt accusantium numquam temporibus, officiis inventore quibusdam molestiae corporis illo maiores consectetur est officia illum laborum!</p>
 <button name="view cv">Ver CV</button>
 
 </section>
 
-<section>
+<section class="skills">
     <h2>Mis Skills</h2>
+    <div class="html">
+        <h3>HTML</h3>
+            <div class="line-white">
+                <div class="line-blue"></div>
+            </div>
+    </div>
+    <div class="css">
+        <h3>CSS</h3>
+            <div class="line-white">
+                <div class="line-blue"></div>
+            </div>
+    </div>
+    <div class="javascript">
+        <h3>JavaScript</h3>
+            <div class="line-white">
+                <div class="line-blue"></div>
+            </div>
+    </div>
+    <div class="vue">
+        <h3>Vue</h3>
+            <div class="line-white">
+                <div class="line-blue"></div>
+            </div>
+    </div>
+    <div class="flexbox">
+        <h3>Flexbox</h3>
+            <div class="line-white">
+                <div class="line-blue"></div>
+            </div>
+    </div>
+    <div class="cssgrid">
+        <h3>CSS Grid</h3>
+            <div class="line-white">
+                <div class="line-blue"></div>
+            </div>
+    </div>
+
+
 </section>
 
 <section>
     <h2>Portafolio</h2>
+    <figure> 
+        <img src="./images/image-01.png" alt="image 01">
+    </figure>
+    <figure> 
+        <img src="./images/image-02.png" alt="image 02">
+    </figure>
+    <figure> 
+        <img src="./images/image-03.png" alt="image 03">
+    </figure>
+    <figure> 
+        <img src="./images/image-04.png" alt="image 04">
+    </figure>
+    <figure> 
+        <img src="./images/image-05.png" alt="image 05">
+    </figure>
+    <figure> 
+        <img src="./images/image-06.png" alt="image 06">
+    </figure>
+    <figure> 
+        <img src="./images/image-07.png" alt="image 07">
+    </figure>
+    <figure> 
+        <img src="./images/image-08.png" alt="image 08">
+    </figure>
+
 </section>
 
 <section>
     <h2>Clientes</h2>
+    <figure> 
+        <img src="./images/image-cli-1.png" alt="image cli 01">
+    </figure>
+    <figure> 
+        <img src="./images/image-cli-2.png" alt="image cli 02">
+    </figure>
+    <figure> 
+        <img src="./images/image-cli-3.png" alt="image cli 03">
+    </figure>
+    <figure> 
+        <img src="./images/image-cli-4.png" alt="image cli 4">
+    </figure>
+    
 </section>
 
 <section>
     <h2>Contacto</h2>
+    
 </section>
 
 </main>
